src/test/deca/syntax/invalid/renduInter01/04missing_brace_if.deca
// Description:
//      tests de programme incorrecte lexicalement (il manque les accolades)
//
// Resultats:
//      Erreur syntaxique
//      Ligne 11 : manque les accolades (=> expected '{', token 'println' inexpected)

{
    int x = 4;
    if ( x == 4 )
        println("hello if", x);
    else
        println("hello else", x);

}
